Remove multi-org oriented methods from TallySnapshots
As of PR #901 We only run tallies one org at a time.  There's no point
in having so many of our methods accepting or returning maps of orgIds
to AccountCalculations when the map will only ever have one entry.